made the signup login and logout controller and routes set up the docs for signup to set up for login and logout routes
