# swagger.yaml
@@ -7,16 +7,10 @@ info:
   version: 1.1.0
   contact:
     email: pandaronit25@gmail.com
-    url: 'https://lco.dev'
-
-# servers:
-#   - url: "https://localhost:4000/api/v1"
-#     description: for local host - secure
-#   - url: "http://localhost:4000/api/v1"
-#     description: for local host - regular
+    url: 'https://github.com/rtpa25'
 
 servers:
-  - url: '{protocol}://localhost:4000/api/{version}'
+  - url: '{protocol}://localhost:3000/api/{version}'
     description: for local host
     variables:
       version:
@@ -39,3 +33,87 @@ components:
     BearerAuth:
       type: http
       scheme: bearer
+
+paths:
+  /dummy:
+    get:
+      tags:
+        - Home
+      summary: returns a greet message from LCO
+      responses:
+        200:
+          description: All good success
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'mystring'
+        400:
+          description: Bad request
+        500:
+          description: internal server error
+
+  /signup:
+    post:
+      tags:
+        - User
+      summary: signup a new user. required files are - name, email, password and photo
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - name
+                - email
+                - password
+                - photo
+              properties:
+                name:
+                  type: string
+                  required: true
+                email:
+                  type: string
+                password:
+                  type: string
+                photo:
+                  in: formData
+                  description: The uploaded file data
+                  type: file
+                  format: binary
+      responses:
+        200:
+          description: All good success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  token:
+                    type: string
+                  user:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                      email:
+                        type: string
+                      role:
+                        type: string
+                      photo:
+                        type: object
+                        properties:
+                          id:
+                            type: string
+                          secure_url:
+                            type: string
+                      _id:
+                        type: string
+                      createdAt:
+                        type: string
+        400:
+          description: Bad request
+        500:
+          description: internal server error
